# azurecost

./: README.md  pyproject.toml  setup.py  tox.ini
.github/workflows/: ci.yml  tests.yml
scripts/: ci.sh
src/azurecost/: __init__.py  commands.py  constants.py  core.py  date_util.py  logger.py  validator.py
tests/: test_commands.py  test_core.py  test_date_util.py  test_util.py
